--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-embed"
-version = "0.3.2"
+version = "0.3.3"
 description = "Rust Marco which loads files into the rust binary at compile time during release and loads the file from the fs during dev"
 readme = "readme.md"
 documentation = "https://docs.rs/rust-embed"
@@ -11,12 +11,8 @@ categories = ["web-programming::http-server"]
 authors = ["pyros2097 <pyros2097@gmail.com>"]
 
 [lib]
-name = "rust_embed"
-plugin = true
+proc-macro = true
 
 [dependencies]
 log = "0.4"
 walkdir = "2.1.4"
-
-[dev-dependencies]
-actix-web = "0.3.3"
