fix release bundling and release v1.1.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,9 @@ matrix:
 script:
   - |
     cargo clean
-    cargo test --lib
-    cargo test --lib --release
+    cargo test --tests --lib
+    cargo test --tests --lib --release
+    cargo clean
+    cargo build --example basic
+    cargo clean
+    cargo build --release --example basic
