Change version in travis from 1.26 to stable
Signed-off-by: Mcat12 <newtoncat12@yahoo.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ cache:
 
 matrix:
   include:
-    - rust: nightly
-    - rust: 1.26
+    - rust: stable
+    allow_failures:
+      - rust: nightly
 
 script:
   - |
