Fix travis yaml again and actually use the cache
Signed-off-by: Mcat12 <newtoncat12@yahoo.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: rust
 sudo: false
 dist: trusty
+rust:
+  - stable
+  - nightly
 
 cache:
   cargo: true
 
 matrix:
-  include:
-    - rust: stable
-    - allow_failures:
-      - rust: nightly
+  allow_failures:
+   - rust: nightly
 
 script:
   - |
-    cargo clean
     cargo test --tests --lib
     cargo test --tests --lib --release
     cargo clean
