--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ rocket_codegen = { version = "0.3.6", optional = true }
 rocket_contrib = { version = "0.3.6", optional = true }
 
 [dev-dependencies]
-rouille = "2.1.0"
-fern = "0.5"
+actix-web = "0.6"
 
 [features]
 nightly = ["rocket", "rocket_codegen", "rocket_contrib"]
