Only run the integration tests in `lib.rs`
Once Rust 1.27 is released we can use a more general command for both
unit and integration tests:
```
cargo test --tests --lib
```
https://github.com/rust-lang/cargo/issues/5387#issuecomment-388937131

Signed-off-by: Mcat12 <newtoncat12@yahoo.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
 
 script:
   - |
-    cargo test --lib
-    cargo test --lib --release
+    cargo test --test lib
+    cargo test --test lib --release
     cargo build --example basic
     cargo build --release --example basic
