--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ matrix:
    - rust: nightly
 
 script:
-  - |
-    cargo test --test lib
-    cargo test --test lib --release
-    cargo build --example basic
-    cargo build --release --example basic
+  - cargo test --test lib
+  - cargo test --test lib --release
+  - cargo build --example basic
+  - cargo build --release --example basic
