--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ syn = "0.11"
 quote = "0.3"
 walkdir = "2.1.4"
 
-actix-web = { version = "0.6", optional = true }
+actix-web = { version = "0.7", optional = true }
+mime_guess = { version = "2.0.0-alpha.6", optional = true }
 
 rocket = { version = "0.3.6", optional = true }
 rocket_codegen = { version = "0.3.6", optional = true }
@@ -26,7 +27,7 @@ rocket_contrib = { version = "0.3.6", optional = true }
 
 [features]
 nightly = ["rocket", "rocket_codegen", "rocket_contrib"]
-actix = ["actix-web"]
+actix = ["actix-web", "mime_guess"]
 
 [badges]
 appveyor = { repository = "pyros2097/rust-embed" }
