--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ rocket_codegen = { version = "0.3.6", optional = true }
 rocket_contrib = { version = "0.3.6", optional = true }
 
 [features]
+default = ["binary"]
+binary = []
 nightly = ["rocket", "rocket_codegen", "rocket_contrib"]
 actix = ["actix-web", "mime_guess"]
 
