--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,31 +51,37 @@ environment:
       target: i686-pc-windows-msvc
   # Nightly 64-bit MSVC
     - channel: nightly
-      target: x86_64-pc-windows-msvc      
+      target: x86_64-pc-windows-msvc
   # Nightly 32-bit MSVC
     - channel: nightly
-      target: i686-pc-windows-msvc      
+      target: i686-pc-windows-msvc
 
 ### GNU Toolchains ###
 
   # Stable 64-bit GNU
     - channel: stable
       target: x86_64-pc-windows-gnu
+      MSYS_BITS: 64
   # Stable 32-bit GNU
     - channel: stable
       target: i686-pc-windows-gnu
+      MSYS_BITS: 32
   # Beta 64-bit GNU
     - channel: beta
       target: x86_64-pc-windows-gnu
+      MSYS_BITS: 64
   # Beta 32-bit GNU
     - channel: beta
       target: i686-pc-windows-gnu
+      MSYS_BITS: 32
   # Nightly 64-bit GNU
     - channel: nightly
-      target: x86_64-pc-windows-gnu      
+      target: x86_64-pc-windows-gnu
+      MSYS_BITS: 64
   # Nightly 32-bit GNU
     - channel: nightly
-      target: i686-pc-windows-gnu      
+      target: i686-pc-windows-gnu
+      MSYS_BITS: 32
 
 ### Allowed failures ###
 
@@ -101,6 +107,7 @@ install:
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init -yv --default-toolchain %channel% --default-host %target%
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
+  - if defined MSYS_BITS set PATH=C:\msys64\mingw%MSYS_BITS%\bin;C:\msys64\usr\bin;%PATH%
   - rustc -vV
   - cargo -vV
 
@@ -117,6 +124,6 @@ test_script:
   - cargo test --test lib
   - cargo test --test lib --release
   - cargo build --example basic
-  - cargo build --example basic --release 
+  - cargo build --example basic --release
   - cargo build --example actix --features actix
   - cargo build --example actix --features actix --release
