reduce appveyor build matrix

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,21 +40,21 @@ environment:
   # Stable 64-bit MSVC
     - channel: stable
       target: x86_64-pc-windows-msvc
-  # Stable 32-bit MSVC
-    - channel: stable
-      target: i686-pc-windows-msvc
-  # Beta 64-bit MSVC
-    - channel: beta
-      target: x86_64-pc-windows-msvc
-  # Beta 32-bit MSVC
-    - channel: beta
-      target: i686-pc-windows-msvc
-  # Nightly 64-bit MSVC
-    - channel: nightly
-      target: x86_64-pc-windows-msvc
-  # Nightly 32-bit MSVC
-    - channel: nightly
-      target: i686-pc-windows-msvc
+  # # Stable 32-bit MSVC
+  #   - channel: stable
+  #     target: i686-pc-windows-msvc
+  # # Beta 64-bit MSVC
+  #   - channel: beta
+  #     target: x86_64-pc-windows-msvc
+  # # Beta 32-bit MSVC
+  #   - channel: beta
+  #     target: i686-pc-windows-msvc
+  # # Nightly 64-bit MSVC
+  #   - channel: nightly
+  #     target: x86_64-pc-windows-msvc
+  # # Nightly 32-bit MSVC
+  #   - channel: nightly
+  #     target: i686-pc-windows-msvc
 
 ### GNU Toolchains ###
 
@@ -62,26 +62,26 @@ environment:
     - channel: stable
       target: x86_64-pc-windows-gnu
       MSYS_BITS: 64
-  # Stable 32-bit GNU
-    - channel: stable
-      target: i686-pc-windows-gnu
-      MSYS_BITS: 32
-  # Beta 64-bit GNU
-    - channel: beta
-      target: x86_64-pc-windows-gnu
-      MSYS_BITS: 64
-  # Beta 32-bit GNU
-    - channel: beta
-      target: i686-pc-windows-gnu
-      MSYS_BITS: 32
-  # Nightly 64-bit GNU
-    - channel: nightly
-      target: x86_64-pc-windows-gnu
-      MSYS_BITS: 64
-  # Nightly 32-bit GNU
-    - channel: nightly
-      target: i686-pc-windows-gnu
-      MSYS_BITS: 32
+  # # Stable 32-bit GNU
+  #   - channel: stable
+  #     target: i686-pc-windows-gnu
+  #     MSYS_BITS: 32
+  # # Beta 64-bit GNU
+  #   - channel: beta
+  #     target: x86_64-pc-windows-gnu
+  #     MSYS_BITS: 64
+  # # Beta 32-bit GNU
+  #   - channel: beta
+  #     target: i686-pc-windows-gnu
+  #     MSYS_BITS: 32
+  # # Nightly 64-bit GNU
+  #   - channel: nightly
+  #     target: x86_64-pc-windows-gnu
+  #     MSYS_BITS: 64
+  # # Nightly 32-bit GNU
+  #   - channel: nightly
+  #     target: i686-pc-windows-gnu
+  #     MSYS_BITS: 32
 
 ### Allowed failures ###
 
