pass debug-embed feature to impl crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ rocket_codegen = { version = "0.3.6", optional = true }
 rocket_contrib = { version = "0.3.6", optional = true }
 
 [features]
-debug-embed = []
+debug-embed = ["rust-embed-impl/debug-embed"]
 nightly = ["rocket", "rocket_codegen", "rocket_contrib"]
 actix = ["actix-web", "mime_guess"]
 
