--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
 
 script:
   - cargo test --test lib
+  - cargo test --test lib --features "debug-embed"
   - cargo test --test lib --release
   - cargo build --example basic
   - cargo build --example basic --release 
