--- a/appveyor.yml
+++ b/appveyor.yml
@@ -131,6 +131,7 @@ build: false
 test_script:
   - cargo +nightly fmt --all -- --check
   - cargo test --test lib
+  - cargo test --test lib --features "debug-embed"
   - cargo test --test lib --release
   - cargo build --example basic
   - cargo build --example basic --release
