--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,11 @@ rust-embed-impl = { version = "4.3.0", path = "impl"}
 actix-web = { version = "0.7", optional = true }
 mime_guess = { version = "2.0.0-alpha.6", optional = true }
 
-rocket = { version = "0.3.6", optional = true }
-rocket_codegen = { version = "0.3.6", optional = true }
-rocket_contrib = { version = "0.3.6", optional = true }
+rocket = { version = "0.4.0", optional = true }
 
 [features]
 debug-embed = ["rust-embed-impl/debug-embed"]
-nightly = ["rocket", "rocket_codegen", "rocket_contrib"]
+nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
 
 [badges]
