--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rocket = { version = "0.4.0", optional = true }
 
 [features]
 debug-embed = ["rust-embed-impl/debug-embed"]
+shellexpand = ["rust-embed-impl/shellexpand"]
 nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
 
