--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -17,7 +17,7 @@ proc-macro = true
 syn = "0.11"
 quote = "0.3"
 walkdir = "2.2.7"
-shellexpand = "1.0"
+shellexpand = { version = "1.0", optional = true }
 
 [features]
 debug-embed = []
