--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,14 @@ rust-embed-impl = { version = "4.3.0", path = "impl"}
 
 actix-web = { version = "0.7", optional = true }
 mime_guess = { version = "2.0.0-alpha.6", optional = true }
-
+warp = { version = "0.1", optional = true }
 rocket = { version = "0.4.0", optional = true }
 
 [features]
 debug-embed = ["rust-embed-impl/debug-embed"]
 nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
+warp-ex = ["warp", "mime_guess"]
 
 [badges]
 appveyor = { repository = "pyros2097/rust-embed" }
