--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,16 @@ name = "interpolated_path"
 path = "tests/interpolated_path.rs"
 required-features = ["interpolate-folder-path"]
 
+[[example]]
+name = "rocket"
+path = "examples/rocket.rs"
+required-features = ["rocket"]
+
+[[example]]
+name = "warp"
+path = "examples/warp.rs"
+required-features = ["warp"]
+
 [dependencies]
 walkdir = "2.2.7"
 rust-embed-impl = { version = "4.4.0", path = "impl"}
