--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,10 @@ script:
   - cargo test --test lib
   - cargo test --test lib --features "debug-embed"
   - cargo test --test lib --release
+  - cargo test --test interpolated_path --features "interpolate-folder-path"
+  - cargo test --test interpolated_path --features "interpolate-folder-path" --release
   - cargo build --example basic
-  - cargo build --example basic --release 
+  - cargo build --example basic --release
   - cargo build --example actix --features actix
   - cargo build --example actix --features actix --release
   - cargo build --example warp --features warp-ex
