--- a/appveyor.yml
+++ b/appveyor.yml
@@ -133,6 +133,8 @@ test_script:
   - cargo test --test lib
   - cargo test --test lib --features "debug-embed"
   - cargo test --test lib --release
+  - cargo test --test interpolated_path --features "interpolate-folder-path"
+  - cargo test --test interpolated_path --features "interpolate-folder-path" --release
   - cargo build --example basic
   - cargo build --example basic --release
   - cargo build --example actix --features actix
