--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ authors = ["pyros2097 <pyros2097@gmail.com>"]
 [dependencies]
 walkdir = "2.2.7"
 rust-embed-impl = { version = "4.5.0", path = "impl"}
+rust-embed-utils = { version = "4.5.0", path = "utils"}
 
 actix-web = { version = "0.7", optional = true }
 mime_guess = { version = "2.0.0-alpha.6", optional = true }
