--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-embed-impl"
+name = "rust-embed-utils"
 version = "4.5.0"
 description = "Rust Custom Derive Macro which loads files into the rust binary at compile time during release and loads the file from the fs during dev"
 readme = "readme.md"
@@ -10,20 +10,8 @@ keywords = ["http", "rocket", "static", "web", "server"]
 categories = ["web-programming::http-server"]
 authors = ["pyros2097 <pyros2097@gmail.com>"]
 
-[lib]
-proc-macro = true
-
 [dependencies]
-rust-embed-utils = { version = "4.5.0", path = "../utils"}
-
-syn = "0.11"
-quote = "0.3"
 walkdir = "2.2.7"
-
-[dependencies.shellexpand]
-version = "1.0"
-optional = true
 
 [features]
 debug-embed = []
-interpolate-folder-path = ["shellexpand"]
