--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ warp = { version = "0.1", optional = true }
 rocket = { version = "0.4.2", optional = true }
 
 [features]
-debug-embed = ["rust-embed-impl/debug-embed"]
+debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
 interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
 nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
