Add compression feature with include_flate
Signed-off-by: Mcat12 <newtoncat12@yahoo.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ walkdir = "2.2.7"
 rust-embed-impl = { version = "5.2.0", path = "impl"}
 rust-embed-utils = { version = "5.0.0", path = "utils"}
 
+include-flate = { version = "0.1", optional = true, features = ["stable"] }
 actix-web = { version = "1", optional = true }
 mime_guess = { version = "2", optional = true }
 warp = { version = "0.1", optional = true }
@@ -23,6 +24,7 @@ rocket = { version = "0.4.2", optional = true }
 [features]
 debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
 interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
+compression = ["rust-embed-impl/compression", "include-flate"]
 nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
 warp-ex = ["warp", "mime_guess"]
