--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - cargo test --test lib
   - cargo test --test lib --features "debug-embed"
   - cargo test --test lib --release
+  - cargo test --test lib --features "compression" --release
   - cargo test --test interpolated_path --features "interpolate-folder-path"
   - cargo test --test interpolated_path --features "interpolate-folder-path" --release
   - cargo build --example basic
