--- a/appveyor.yml
+++ b/appveyor.yml
@@ -133,6 +133,7 @@ test_script:
   - cargo test --test lib
   - cargo test --test lib --features "debug-embed"
   - cargo test --test lib --release
+  - cargo test --test lib --features "compression" --release
   - cargo test --test interpolated_path --features "interpolate-folder-path"
   - cargo test --test interpolated_path --features "interpolate-folder-path" --release
   - cargo build --example basic
