examples: update actix-web to 2.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ rust-embed-impl = { version = "5.3.0", path = "impl"}
 rust-embed-utils = { version = "5.0.0", path = "utils"}
 
 include-flate = { version = "0.1", optional = true, features = ["stable"] }
-actix-web = { version = "1", optional = true }
+actix-web = { version = "2", optional = true }
+actix-rt = { version = "1", optional = true }
 mime_guess = { version = "2", optional = true }
 warp = { version = "0.1", optional = true }
 rocket = { version = "0.4.2", optional = true }
@@ -27,7 +28,7 @@ debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
 interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
 compression = ["rust-embed-impl/compression", "include-flate"]
 nightly = ["rocket"]
-actix = ["actix-web", "mime_guess"]
+actix = ["actix-web", "actix-rt", "mime_guess"]
 warp-ex = ["warp", "mime_guess"]
 
 [badges]
