--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ documentation = "https://docs.rs/rust-embed"
 repository = "https://github.com/pyros2097/rust-embed"
 license = "MIT"
 keywords = ["http", "rocket", "static", "web", "server"]
-categories = ["web-programming::http-server"]
+categories = ["web-programming"]
 authors = ["pyros2097 <pyros2097@gmail.com>"]
 edition = "2018"
 
