Use actix_web::main instead of actix_rt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,6 @@ rust-embed-utils = { version = "5.0.0", path = "utils"}
 
 include-flate = { version = "0.1", optional = true, features = ["stable"] }
 actix-web = { version = "3", default-features = false, optional = true }
-actix-rt = { version = "1", optional = true }
 mime_guess = { version = "2", optional = true }
 tokio = { version = "0.2", optional = true, features = ["macros"] }
 warp = { version = "0.2", default-features = false, optional = true }
@@ -49,7 +48,7 @@ debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
 interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
 compression = ["rust-embed-impl/compression", "include-flate"]
 nightly = ["rocket"]
-actix = ["actix-web", "actix-rt", "mime_guess"]
+actix = ["actix-web", "mime_guess"]
 warp-ex = ["warp", "tokio", "mime_guess"]
 
 [badges]
