--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -19,6 +19,7 @@ rust-embed-utils = { version = "5.0.0", path = "../utils"}
 
 syn = "1"
 quote = "1"
+proc-macro2 = "1"
 walkdir = "2.3.1"
 
 [dependencies.shellexpand]
