--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ path = "tests/interpolated_path.rs"
 required-features = ["interpolate-folder-path"]
 
 [dependencies]
+sha2 = "0.9"
 walkdir = "2.3.1"
 rust-embed-impl = { version = "5.9.0", path = "impl"}
 rust-embed-utils = { version = "5.1.0", path = "utils"}
