--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,6 @@ path = "tests/interpolated_path.rs"
 required-features = ["interpolate-folder-path"]
 
 [dependencies]
-sha2 = "0.9"
 walkdir = "2.3.1"
 rust-embed-impl = { version = "5.9.0", path = "impl"}
 rust-embed-utils = { version = "5.1.0", path = "utils"}
@@ -43,6 +42,9 @@ mime_guess = { version = "2", optional = true }
 tokio = { version = "0.2", optional = true, features = ["macros"] }
 warp = { version = "0.2", default-features = false, optional = true }
 rocket = { version = "0.4.5", default-features = false, optional = true }
+
+[dev-dependencies]
+sha2 = "0.9"
 
 [features]
 debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
