--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -15,5 +15,10 @@ edition = "2018"
 walkdir = "2.3.1"
 sha2 = "0.9"
 
+[dependencies.glob]
+version = "0.3.0"
+optional = true
+
 [features]
 debug-embed = []
+include-exclude = ["glob"]
