--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,11 @@ name = "rocket"
 path = "examples/rocket.rs"
 required-features = ["rocket"]
 
+[[example]]
+name = "axum"
+path = "examples/axum.rs"
+required-features = ["axum-ex"]
+
 [[test]]
 name = "interpolated_path"
 path = "tests/interpolated_path.rs"
@@ -44,9 +49,10 @@ rust-embed-utils = { version = "7.0.0", path = "utils"}
 include-flate = { version = "0.1", optional = true, features = ["stable"] }
 actix-web = { version = "3", default-features = false, optional = true }
 mime_guess = { version = "2", optional = true }
-tokio = { version = "0.2", optional = true, features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }
 warp = { version = "0.2", default-features = false, optional = true }
 rocket = { version = "0.4.5", default-features = false, optional = true }
+axum = { version = "0.2.3", default-features = false, optional = true  }
 
 [dev-dependencies]
 sha2 = "0.9"
@@ -59,6 +65,8 @@ include-exclude = ["rust-embed-impl/include-exclude"]
 nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
 warp-ex = ["warp", "tokio", "mime_guess"]
+axum-ex = ["axum", "tokio", "mime_guess"]
+
 
 [badges]
 appveyor = { repository = "pyros2097/rust-embed" }
