--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ sha2 = "0.9"
 debug-embed = ["rust-embed-impl/debug-embed", "rust-embed-utils/debug-embed"]
 interpolate-folder-path = ["rust-embed-impl/interpolate-folder-path"]
 compression = ["rust-embed-impl/compression", "include-flate"]
-include-exclude = ["rust-embed-impl/include-exclude"]
+include-exclude = ["rust-embed-impl/include-exclude", "rust-embed-utils/include-exclude"]
 nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
 warp-ex = ["warp", "tokio", "mime_guess"]
