--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,11 @@ name = "axum"
 path = "examples/axum.rs"
 required-features = ["axum-ex"]
 
+[[example]]
+name = "poem"
+path = "examples/poem.rs"
+required-features = ["poem-ex"]
+
 [[test]]
 name = "interpolated_path"
 path = "tests/interpolated_path.rs"
@@ -49,10 +54,12 @@ rust-embed-utils = { version = "7.0.0", path = "utils"}
 include-flate = { version = "0.1", optional = true, features = ["stable"] }
 actix-web = { version = "3", default-features = false, optional = true }
 mime_guess = { version = "2", optional = true }
+hex = { version = "0.4.3", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thread"] }
 warp = { version = "0.3", default-features = false, optional = true }
 rocket = { version = "0.4.5", default-features = false, optional = true }
 axum = { version = "0.2.3", default-features = false, optional = true  }
+poem = { version = "1.0.8", default-features = false, optional = true  }
 
 [dev-dependencies]
 sha2 = "0.9"
@@ -66,6 +73,7 @@ nightly = ["rocket"]
 actix = ["actix-web", "mime_guess"]
 warp-ex = ["warp", "tokio", "mime_guess"]
 axum-ex = ["axum", "tokio", "mime_guess"]
+poem-ex = ["poem", "tokio", "mime_guess", "hex"]
 
 
 [badges]
