--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ mime_guess = { version = "2", optional = true }
 hex = { version = "0.4.3", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thread"] }
 warp = { version = "0.3", default-features = false, optional = true }
-rocket = { version = "0.4.5", default-features = false, optional = true }
+rocket = { version = "0.5.0-rc.1", default-features = false, optional = true }
 axum = { version = "0.2.3", default-features = false, optional = true  }
 poem = { version = "1.0.8", default-features = false, optional = true  }
 
