--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,10 @@ jobs:
           cargo test --test interpolated_path --features "interpolate-folder-path" --release
           cargo build --example basic
           cargo build --example actix --features actix
+          cargo build --example axum --features axum-ex
           cargo build --example warp --features warp-ex
           cargo test --test lib --release
           cargo build --example basic --release
           cargo build --example actix --features actix --release
+          cargo build --example axum --features axum-ex --release
           cargo build --example warp --features warp-ex --release
