--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ warp = { version = "0.3", default-features = false, optional = true }
 rocket = { version = "0.5.0-rc.1", default-features = false, optional = true }
 axum = { version = "0.4", default-features = false, features = ["http1"], optional = true  }
 poem = { version = "1.0.8", default-features = false, optional = true  }
+salvo = { version = "0.16", default-features = false, optional = true  }
 
 [dev-dependencies]
 sha2 = "0.9"
@@ -73,6 +74,7 @@ actix = ["actix-web", "mime_guess"]
 warp-ex = ["warp", "tokio", "mime_guess"]
 axum-ex = ["axum", "tokio", "mime_guess"]
 poem-ex = ["poem", "tokio", "mime_guess", "hex"]
+salvo-ex = ["salvo", "tokio", "mime_guess", "hex"]
 
 
 [badges]
