--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thre
 warp = { version = "0.3", default-features = false, optional = true }
 rocket = { version = "0.5.0-rc.1", default-features = false, optional = true }
 axum = { version = "0.4", default-features = false, features = ["http1"], optional = true  }
-poem = { version = "1.0.8", default-features = false, optional = true  }
+poem = { version = "1.3.18", default-features = false, features = ["server"], optional = true  }
 salvo = { version = "0.16", default-features = false, optional = true  }
 
 [dev-dependencies]
