--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ rust-embed-impl = { version = "6.2.0", path = "impl"}
 rust-embed-utils = { version = "7.2.0", path = "utils"}
 
 include-flate = { version = "0.1", optional = true, features = ["stable"] }
-actix-web = { version = "3", default-features = false, optional = true }
+actix-web = { version = "4", optional = true }
 mime_guess = { version = "2", optional = true }
 hex = { version = "0.4.3", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thread"] }
