--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,7 +2,7 @@ unstable_features = false
 wrap_comments = true
 normalize_comments = true
 merge_derives = true
-fn_args_layout = "Compressed"
+fn_params_layout = "Compressed"
 max_width = 160
 tab_spaces = 2
 indent_style = "Block"
