--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -32,3 +32,4 @@ interpolate-folder-path = ["shellexpand"]
 compression = []
 mime-guess = ["rust-embed-utils/mime-guess"]
 include-exclude = ["rust-embed-utils/include-exclude"]
+deterministic-timestamps = []
